// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preview(as Form) snapshot 1`] = `
<div
  style="position: relative; background: rgb(74, 74, 74); width: 1200px; height: 1200px;"
>
  <div
    style="margin: 0px auto; width: 1200px; height: 1200px;"
  >
    <div
      style="position: absolute; bottom: 6%; width: 1200px;"
    >
      <div
        style="display: flex; align-items: center; justify-content: center; gap: 15px; position: relative; z-index: 1; left: calc(50% - 62.5px); width: 125px; background: rgba(119, 119, 119, 0.902); border-radius: 2px; padding: 0.5rem;"
      >
        <div
          style="display: flex; align-items: center; justify-content: center;"
        >
          <button
            style="padding-left: 0.5rem; cursor: pointer; background: none; display: flex; align-items: center;"
            type="button"
          >
            <svg
              aria-hidden="true"
              color="#fff"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.5 12h-15"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
          <strong
            style="color: white; font-size: 0.9rem; min-width: 50px; text-align: center;"
          >
            100
            %
          </strong>
          <button
            style="padding-right: 0.5rem; cursor: pointer; background: none; display: flex; align-items: center;"
            type="button"
          >
            <svg
              aria-hidden="true"
              color="#fff"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 4.5v15m7.5-7.5h-15"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      style="width: 1200px; height: 1200px; position: relative; overflow: auto;"
    >
      <div
        style="transform: scale(1); transform-origin: top left; height: 1px; width: 1px;"
      >
        <div
          id="@pdfme/ui-paper0"
          style="font-family: 'Roboto'; top: 20px; left: 203.14960629450002px; position: relative; background-image: url(data:image/png;base64,a...); background-size: 793.700787411px 1122.5196850527px; width: 793.700787411px; height: 1122.5196850527px;"
        >
          <div>
            <div
              class="selectable"
              id="1"
              style="position: absolute; cursor: pointer; height: 56.692913386499995px; width: 377.95275591px; top: 75.590551182px; left: 75.590551182px; transform: rotate(0deg); outline: 1px dashed #4af;"
              title="field1"
            >
              <div
                style="height: 100%; width: 100%;"
              >
                <div
                  style="padding: 0px; resize: none; display: flex; flex-direction: column; justify-content: flex-start; width: 100%; height: 100%;"
                >
                  <textarea
                    placeholder="bb"
                    rows="1"
                    style="padding: 3.436640625px 0px 0px 0px; resize: none; outline: none; background-color: transparent; width: 100%; height: 100%; font-family: inherit; color: rgb(0, 0, 0); font-size: 30pt; letter-spacing: 0pt; line-height: 1em; text-align: left; white-space: pre-wrap; word-break: break-word;"
                    tabindex="100"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="selectable"
              id="2"
              style="position: absolute; cursor: pointer; height: 151.181102364px; width: 377.95275591px; top: 132.2834645685px; left: 75.590551182px; transform: rotate(0deg); outline: 1px dashed #4af;"
              title="field2"
            >
              <div
                style="height: 100%; width: 100%;"
              >
                <div
                  style="width: 100%; height: 100%; background-image: none; background-size: 377.95275591px 151.181102364px;"
                >
                  <img
                    src="field2"
                    style="height: 100%; width: 100%; border-radius: 0;"
                  />
                  <button
                    style="position: absolute; top: 0px; left: 0px; z-index: 1; display: flex; justify-content: center; align-items: center; color: rgb(51, 51, 51); background: rgb(242, 242, 242); border-radius: 2px; border: 1px solid #767676; cursor: pointer; height: 24px; width: 24px;"
                  >
                    x
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Preview(as Viewer) snapshot 1`] = `
<div
  style="position: relative; background: rgb(74, 74, 74); width: 1200px; height: 1200px;"
>
  <div
    style="margin: 0px auto; width: 1200px; height: 1200px;"
  >
    <div
      style="position: absolute; bottom: 6%; width: 1200px;"
    >
      <div
        style="display: flex; align-items: center; justify-content: center; gap: 15px; position: relative; z-index: 1; left: calc(50% - 62.5px); width: 125px; background: rgba(119, 119, 119, 0.902); border-radius: 2px; padding: 0.5rem;"
      >
        <div
          style="display: flex; align-items: center; justify-content: center;"
        >
          <button
            style="padding-left: 0.5rem; cursor: pointer; background: none; display: flex; align-items: center;"
            type="button"
          >
            <svg
              aria-hidden="true"
              color="#fff"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.5 12h-15"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
          <strong
            style="color: white; font-size: 0.9rem; min-width: 50px; text-align: center;"
          >
            100
            %
          </strong>
          <button
            style="padding-right: 0.5rem; cursor: pointer; background: none; display: flex; align-items: center;"
            type="button"
          >
            <svg
              aria-hidden="true"
              color="#fff"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-width="1.5"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 4.5v15m7.5-7.5h-15"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      style="width: 1200px; height: 1200px; position: relative; overflow: auto;"
    >
      <div
        style="transform: scale(1); transform-origin: top left; height: 1px; width: 1px;"
      >
        <div
          id="@pdfme/ui-paper0"
          style="font-family: 'Roboto'; top: 20px; left: 203.14960629450002px; position: relative; background-image: url(data:image/png;base64,a...); background-size: 793.700787411px 1122.5196850527px; width: 793.700787411px; height: 1122.5196850527px;"
        >
          <div>
            <div
              class="selectable"
              id="1"
              style="position: absolute; cursor: pointer; height: 56.692913386499995px; width: 377.95275591px; top: 75.590551182px; left: 75.590551182px; transform: rotate(0deg); outline: transparent;"
              title="field1"
            >
              <div
                style="height: 100%; width: 100%;"
              >
                <div
                  style="padding: 0px; resize: none; background-color: transparent; display: flex; flex-direction: column; justify-content: flex-start; width: 100%; height: 100%;"
                >
                  <div
                    style="font-family: inherit; color: rgb(0, 0, 0); font-size: 30pt; letter-spacing: 0pt; line-height: 1em; text-align: left; white-space: pre-wrap; word-break: break-word; margin-bottom: 0px; padding-top: 3.436640625px;"
                  >
                    <span
                      style="letter-spacing:inherit;"
                    >
                      f
                    </span>
                    <span
                      style="letter-spacing:inherit;"
                    >
                      i
                    </span>
                    <span
                      style="letter-spacing:inherit;"
                    >
                      e
                    </span>
                    <span
                      style="letter-spacing:inherit;"
                    >
                      l
                    </span>
                    <span
                      style="letter-spacing:inherit;"
                    >
                      d
                    </span>
                    <span
                      style="letter-spacing:0;"
                    >
                      1
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="selectable"
              id="2"
              style="position: absolute; cursor: pointer; height: 151.181102364px; width: 377.95275591px; top: 132.2834645685px; left: 75.590551182px; transform: rotate(0deg); outline: transparent;"
              title="field2"
            >
              <div
                style="height: 100%; width: 100%;"
              >
                <div
                  style="width: 100%; height: 100%; background-image: none; background-size: 377.95275591px 151.181102364px;"
                >
                  <img
                    src="field2"
                    style="height: 100%; width: 100%; border-radius: 0;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
